@@ -4,7 +4,7 @@ rm -rf output_linux_installer_deb
 jpackage --type deb \
 	--app-version $version \
 	--copyright "Brandon Li ($year)" \
-	--description "Brandon's Semiconductor Simulator" \
+	--description "Brandon's Semiconductor Simulator 3D" \
 	--name SemiSim \
 	--icon ../images/icon.png \
 	--vendor "Brandon Li" \
@@ -12,8 +12,7 @@ jpackage --type deb \
 	--dest output_linux_installer_deb \
 	--main-class electrodynamics.SemiSim \
 	--main-jar SemiSim-$version.jar \
-	--java-options -XX:-TieredCompilation \
-	--java-options -XX:CompileThresholdScaling=0.25 \
+	--java-options "-XX:-TieredCompilation -XX:CompileThresholdScaling=0.25 --add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED" \
 	--about-url "https://brandonli.net/semisim" \
 	--file-associations semisim.properties \
 	--license-file ../license.txt \
